fix overflow issue

--- a/src/components/FilterRestaurants.css
+++ b/src/components/FilterRestaurants.css
@@ -1,34 +1,32 @@
 .main-view {
   display: flex;
-  max-width: 100%;
-  max-height: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
-.filter-feature {
-  width: 100%;
-  height: 50px;
-  background-color: #ffcc00;
-  font-size: 25px;
-}
-.label-data {
-  margin-right: 25px;
-  margin-left: 25px;
-}
-.select-from {
-  margin-right: 15px;
-  margin-top: 5px;
-  border-radius: 15px;
-}
-.select-to {
-  margin-left: 15px;
-  margin-top: 5px;
-  border-radius: 15px;
-}
+
 .restaurants-map {
   justify-content: flex-start;
-  width: 65%;
+  width: 70%;
 }
 
 .restaurants-list {
   justify-content: flex-end;
   width: 35%;
+}
+
+@media only screen and (max-width: 717px) {
+  .main-view {
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
+
+  .restaurants-map {
+    justify-content: flex-start;
+    width: 100%;
+  }
+
+  .restaurants-list {
+    display: none;
+  }
 }
